app-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hrapp-backend
  template:
    metadata:
      labels:
        app: hrapp-backend
    spec:
      containers:
      - name: hrapp-backend
        image: 636768524979.dkr.ecr.us-west-1.amazonaws.com/narayanan-cap:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hrapp-backend-service
spec:
  selector:
    app: hrapp-backend
  ports:
  - port: 3030
    targetPort: 3000
  type: LoadBalancer
