mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-app-mongo
  template:
    metadata:
      labels:
        app: hr-app-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: hr-app-mongo-service
spec:
  selector:
    app: hr-app-mongo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
