ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # - path: /digibank(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: digi-bank-service
      #       port:
      #         number: 4545
      # - path: /bot(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: bot-web-service
      #       port:
      #         number: 3001
      - path: /hrapp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hrapp-backend-service
            port:
              number: 3030
      - path: /mongo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hrapp-mongo-service
            port:
              number: 27017
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: hrapp-backend-service
            port:
              number: 3030
